--- a/r_dashboard/plot_scripts/map_mental_health_score.Rmd
+++ b/r_dashboard/plot_scripts/map_mental_health_score.Rmd
@@ -8,18 +8,42 @@ output: html_document
 ```{r}
 library(tidyverse)
 library(sf)
+library(here)
 ```
 
 ```{r}
 #read in shapefile
-scot_la <- st_read("clean_data/scot_la.shp")
+scot_la <- st_read(here::here("clean_data/scot_la.shp"))
 
 #read in mental health data
-all_time_mental <- read_csv("clean_data/all_time_mental.csv")
+all_time_mental <- read_csv(here::here("clean_data/all_time_mental.csv"))
+
+#read in simd data 
+simd <- read_csv(here::here("clean_data/simd_la_2012_2020.csv")) %>%
+  filter(year == "2016") %>%
+  select(-la_name)
+
+#read in suicide data
+suicide_drug_alcohol <- read_csv(here::here("clean_data/mh_la_5yr_agg.csv"))
+
+#join suicide to mental health data
+suicide_drug_alcohol <- suicide_drug_alcohol %>% 
+  select(indicator, sex, la_code, measure, year) %>%
+  filter(year == 2016) %>%
+  pivot_wider(names_from = indicator, 
+             values_from = measure) %>% clean_names() %>%
+  pivot_wider(names_from = sex,
+              values_from = c("alcohol_specific_deaths", "drug_related_deaths", "deaths_from_suicide")) %>%
+  mutate(total_suicide_deaths = deaths_from_suicide_females + deaths_from_suicide_males)
+
+#join mental health data together
+all_time_mental <- all_time_mental %>% 
+  left_join(simd, by = c("feature_code" = "la_code")) %>% 
+  left_join(suicide_drug_alcohol, by = c("feature_code" = "la_code"))
 
 #Join mental health data to shapefile
 scot_la <- scot_la %>%
-  left_join(all_time_mental, by = c("area_cod_1" = "feature_code"))
+  left_join(all_time_mental, by = c("area_cod_1" = "feature_code")) 
 
 #Check projection, for use with leaflet must be WGS84
 #st_crs(scot_la)
@@ -40,21 +64,101 @@ ggplot(aes(fill = swem_score)) +
 
 ```{r}
 library(leaflet)
+library(htmltools)
 ```
 
 ```{r}
-bins <- c(23.5, 24, 24.5, 25, 25.5, 26, Inf)
-pal <- colorBin("plasma", domain = transformed$swem_score, bins = bins)
+#make labels
+transformed <- transformed %>%
+  mutate(leaflet_lb = HTML(paste(
+    la_name, "<br>" ,"WEMWBS Score: ", swem_score)))
 
-leaflet(transformed) %>% 
-  addProviderTiles("CartoDB.Positron") %>% 
-  addPolygons(fillColor = ~pal(swem_score),
-              color = "white",
-              weight = 0.5,
-              smoothFactor = 0.5,
-              opacity = 0.8,
-              fillOpacity = 1,
-              highlightOptions = highlightOptions(color = "black",
-                                                  weight = 1,
-                                                  bringToFront = TRUE))
+
+# Set pallete for SWEM score
+pal_swem <- colorNumeric(
+  palette = "YlGnBu",
+  domain = transformed$swem_score
+)
+
+# Set pallete for suicide  deaths
+pal_suicide<- colorNumeric(
+  palette = "plasma",
+  domain = transformed$total_suicide_deaths
+)
+
+bbox <- st_bbox(transformed) %>% 
+  as.vector()
+
+leaflet(transformed) %>%
+  #add base tiles
+  addProviderTiles("CartoDB.Positron") %>%
+  # add swem score layer
+  addPolygons(
+    fillColor = ~ pal_swem(swem_score),
+    color = "black",
+    weight = 0.1,
+    smoothFactor = 0.9,
+    opacity = 0.8,
+    fillOpacity = 0.9,
+    label = ( ~ la_name),
+    labelOptions = labelOptions(
+      style = list("font-weight" = "normal", padding = "3px 8px"),
+      textsize = "15px",
+      direction = "auto"
+    ),
+    highlightOptions = highlightOptions(
+      color = "#0C2C84",
+      weight = 1,
+      bringToFront = TRUE
+    ),
+    group = "wemwbs_score"
+  ) %>%
+  #add suicide layer
+  addPolygons(
+    fillColor = ~ pal_suicide(total_suicide_deaths),
+    color = "black",
+    weight = 0.1,
+    smoothFactor = 0.9,
+    opacity = 0.8,
+    fillOpacity = 0.9,
+    label = ( ~ la_name),
+    labelOptions = labelOptions(
+      style = list("font-weight" = "normal", padding = "3px 8px"),
+      textsize = "15px",
+      direction = "auto"
+    ),
+    highlightOptions = highlightOptions(
+      color = "#0C2C84",
+      weight = 1,
+      bringToFront = TRUE
+    ),
+    group = "suicide"
+  ) %>% 
+  #add legend for swem score 
+  addLegend(
+    "bottomright",
+    pal = pal_swem,
+    values = ~ swem_score,
+    title = "Average WEMWBS Score",
+    opacity = 1,
+    group = "wemwbs_score"
+  ) %>%
+    #add legend for suicide 
+  addLegend(
+    "bottomright",
+    pal = pal_suicide,
+    values = ~ total_suicide_deaths,
+    title = "Deaths from Suicide",
+    opacity = 1,
+    group = "suicide"
+  ) %>%
+  addLayersControl(position = c("bottomleft"),
+                   baseGroups = c("wemwbs_score", "suicide"),
+                   options = layersControlOptions(collapsed = FALSE)) %>%
+  #set bounds of map
+  fitBounds(bbox[1], bbox[2], bbox[3], bbox[4])
 ```
+
+
+
+
