--- a/r_dashboard/analysis_scripts/general_health_analysis.Rmd
+++ b/r_dashboard/analysis_scripts/general_health_analysis.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
 
 # Link to the raw data:-
@@ -85,91 +87,82 @@ general_health <- general_health %>%
 ```
 
 
+
 ```{r}
 general_health %>% 
-  #filtering to remove "All" in limiting_long_term_physical_or_mental_health_condition column to show the terms "limiting condition" and "no limiting condition"
+  filter(measurement == "Percent") %>%  
+    #filtering to remove "All" in limiting_long_term_physical_or_mental_health_condition column 
   filter(!limiting_long_term_physical_or_mental_health_condition == "All") %>% 
- # mutate(ratio)
+  select(-household_type, -type_of_tenure, -age, -feature_code, -units) %>% 
+  group_by(gender, date_code, value, self_assessed_general_health, limiting_long_term_physical_or_mental_health_condition) %>% 
+  summarise() %>% 
+  group_by(date_code, self_assessed_general_health, limiting_long_term_physical_or_mental_health_condition) %>% 
+  summarise(mean_self_assessment_value = mean(value)) %>% 
   ggplot() +
-  geom_col(aes(x = limiting_long_term_physical_or_mental_health_condition, y = value, fill = self_assessed_general_health)) +
+  geom_col(aes(x = limiting_long_term_physical_or_mental_health_condition, y = mean_self_assessment_value, fill = self_assessed_general_health)) +
   facet_grid(~date_code) +
   labs(title = "Self Assessed General Health in Scotland",
        subtitle = "2012 - 2019",
        x = "Limiting Long Term Physical or Mental Health Condition",
-       y = "Value",
+       y = "Mean Self Assessment Value",
        fill = "Self Assessed General Health") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
-```
-
-```{r}
-general_health %>% 
-  #filtering to remove "All" in limiting_long_term_physical_or_mental_health_condition column
-  filter(!age == "All") %>% 
-    #filtering to remove "All" in limiting_long_term_physical_or_mental_health_condition column 
-  ggplot() +
-  geom_bar(aes(x = limiting_long_term_physical_or_mental_health_condition, fill = self_assessed_general_health)) +
-  facet_grid(~age) +
-  labs(title = "Self Assessed General Health by Age",
-       subtitle = "2012 - 2019",
-       x = "All Respondents",
-       y = "Number of Respondents",
-       fill = "Self Assessed General Health") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
-```
-
-```{r}
-general_health_limiting_conditions_male <- general_health %>% 
-  #filter(limiting_long_term_physical_or_mental_health_condition == "Y") %>% 
-  select(-household_type, -type_of_tenure, -age, -feature_code, -units) %>% 
-  group_by(gender, date_code, measurement, value) %>% 
-  summarise() %>% 
-  filter(gender == "Male") %>% 
-  filter(measurement == "Percent") %>% 
-  group_by(date_code, measurement) %>% 
-  summarise(mean_percentage = mean(value))
-
-general_health_limiting_conditions_female <- general_health %>% 
-  #filter(limiting_long_term_physical_or_mental_health_condition == "Y") %>% 
-  select(-household_type, -type_of_tenure, -age, -feature_code, -units) %>% 
-  group_by(gender, date_code, measurement, value) %>% 
-  summarise() %>% 
-  filter(gender == "Female") %>% 
-  filter(measurement == "Percent") %>% 
-  group_by(date_code, measurement) %>% 
-  summarise(mean_percentage = mean(value))
-
-
-  ggplot(general_health_limiting_conditions_male, aes(x = date_code, y = mean_percentage, group = measurement)) +
-    geom_line() +
-  geom_line(aes(colour = "Male")) +
-    geom_line(data =general_health_limiting_conditions_female, aes(group = measurement, colour = "Female")) +
-     labs(title = "Self Assessed General Health in Scotland by Gender",
-       subtitle = "2012 - 2019",
-       x = "Year",
-       y = "Mean Self Assessment Value (Percent)",
-       colour = "Gender") +
-    scale_x_continuous(breaks = c(2012:2019))
 ```
 
 ```{r}
 general_health_limiting_conditions_all <- general_health %>% 
-  #filter(limiting_long_term_physical_or_mental_health_condition == "Y") %>% 
+  filter(measurement == "Percent") %>%  
   select(-household_type, -type_of_tenure, -age, -feature_code, -units) %>% 
-  group_by(gender, date_code, measurement, value) %>% 
+  group_by(gender, date_code, value, self_assessed_general_health) %>% 
   summarise() %>% 
   filter(gender == "All") %>% 
-  filter(measurement == "Percent") %>% 
-  group_by(date_code, measurement) %>% 
-  summarise(mean_percentage = mean(value)) 
+  group_by(date_code, self_assessed_general_health) %>% 
+  summarise(mean_self_assessment_value = mean(value)) 
 ```
 
 ```{r}
-ggplot(general_health_limiting_conditions_all, aes(x = date_code, y = mean_percentage, group = measurement)) +
+ggplot(general_health_limiting_conditions_all, aes(x = date_code, y = mean_self_assessment_value, colour = self_assessed_general_health)) +
     geom_line() +
      labs(title = "Self Assessed General Health in Scotland",
        subtitle = "2012 - 2019",
        x = "Year",
-       y = "Mean Self Assessment Value (Percent)") +
+       y = "Mean Self Assessment Value",
+       colour = "Self Assessment") +
     scale_x_continuous(breaks = c(2012:2019)) 
 ```
+
+```{r}
+general_health_limiting_conditions_male <- general_health %>% 
+  filter(measurement == "Percent") %>% 
+  select(-household_type, -type_of_tenure, -age, -feature_code, -units) %>% 
+  group_by(gender, date_code, measurement, value) %>% 
+  summarise() %>% 
+  filter(gender == "Male") %>% 
+  group_by(date_code) %>% 
+  summarise(mean_self_assessment_value = mean(value))
+
+general_health_limiting_conditions_female <- general_health %>% 
+  filter(measurement == "Percent") %>% 
+  select(-household_type, -type_of_tenure, -age, -feature_code, -units) %>% 
+  group_by(gender, date_code, measurement, value) %>% 
+  summarise() %>% 
+  filter(gender == "Female") %>% 
+  group_by(date_code) %>% 
+  summarise(mean_self_assessment_value = mean(value))
+
+
+  ggplot(general_health_limiting_conditions_male, aes(x = date_code, y = mean_self_assessment_value)) +
+    geom_line() +
+  geom_line(aes(colour = "Male")) +
+    geom_line(data =general_health_limiting_conditions_female, aes(colour = "Female")) +
+     labs(title = "Self Assessed General Health in Scotland by Gender",
+       subtitle = "2012 - 2019",
+       x = "Year",
+       y = "Mean Self Assessment Value",
+       colour = "Gender") +
+    scale_x_continuous(breaks = c(2012:2019))
+```
+
+
+
 
