--- a/r_dashboard/plot_scripts/plots_graeme.Rmd
+++ b/r_dashboard/plot_scripts/plots_graeme.Rmd
@@ -10,14 +10,13 @@ library(tidyverse)
 ```
 #alcohol
 ```{r}
-shs_nopivot%>% 
+shs_la_nopivot%>% 
   filter(str_detect(scottish_health_survey_indicator, "^Alcohol consumption*")) %>% 
-  filter(la_name == "Aberdeen City") %>%
+  filter(la_name == "All") %>%
   filter(sex == "All") %>% 
-  ggplot() +
-  aes(x = date_code, y = value, fill = scottish_health_survey_indicator) +
+  ggplot(aes(x = date_code, y = value, fill = scottish_health_survey_indicator)) +
   geom_bar(stat="identity") +
-  geom_text(aes(y=value, label = ""),
+  geom_text(aes(y=value, label = "percentage"),
     position = position_stack(vjust = 0.5), colour="white")
 ```
 #cardiovascular
